Fri Jan  2 19:38:32 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * tao/Fixed_Array_Argument_T.inl:

          Extended the existing workaround for IBM Visual Age 6 (xlC 6)
          to also cover versions 7 and 8.

        * TAO_IDL/be/be_visitor_field/cdr_op_cs.cpp:

          The generated code for multi-dim arrays in structures has the same
          problem on the VA 8 compiler.

Fri Dec 26 21:29:32 UTC 2008  Ciju John  <johnc at ociweb dot com>

        * examples/RTScheduling/Fixed_Priority_Scheduler/run_test.pl:
          Increase timeout between client & server startups to give more
          time for server initialization.

Wed Dec 24 10:28:46 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TAO_Singleton_Manager.cpp:
          Added a fini method which is marked with ACE_GCC_DESTRUCTOR_ATTRIBUTE.
          This will make sure we destroy the TAO_Singleton_Manager instance
          when the TAO library gets unloaded

        * tao/PortableServer/Root_POA.cpp:
        * tao/PortableServer/Root_POA.h:
          Added fini method and mark this with ACE_GCC_DESTRUCTOR_ATTRIBUTE.
          With GCC this method then gets called when the TAO library gets
          unloaded which fixes a memory leak

        * tao/TAO_Singleton.cpp:
          Only deliver implementation when ACE_HAS_DUMP is defined

Tue Dec 23 19:48:46 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TAO_Internal.cpp:
          Reverted part of the change of
          Mon Dec 22 11:14:46 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>.
          The lifetime of the TAO_Singleton_Manager has to be dependent on the
          TAO dll not on the last ORB. We really need a way to explicitly
          tie the cleanup of the singletons to the DLL unload

Tue Dec 23 09:20:46 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3506_Regression/server.cpp:
          Use explicit activation
